# math-rag-knowledge

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  docker-compose.prod.yml  docker-compose.yml  mypy.ini  pyproject.toml  ruff.toml  必须先读我.txt
.claude/: MEMORY.md  activeContext.md  install-log.md  primer.md  settings.json
.claude/rules/: api.md  autonomous.md  behavior.md  compliance.md  database.md  python.md  security.md  testing.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  deploy.yml
config/: README.md  新项目快速启动.md
config/L0-组织强制/: README.md
config/L1-用户全局/: CLAUDE.md  README.md  settings.json
config/L2-项目共享/: .claudeignore  MEMORY.md  README.md  activeContext.md  global-memory.md
config/L3-项目本地/: CLAUDE.local.md  README.md  settings.local.json
crewAI-IT-docs/knowledge/: glossary.md  ieee830_full_guide.md  template.md
deploy/: README.md  install.bat  install.ps1  install.sh
docker/: Dockerfile.backend
docs/: CI-Pipeline-阶段定义-v1.md  PM-资源估算与时间线-v1.md  SRE-运维规范-数学冒险世界-v1.md  SRS-数学冒险世界-v1.md  SRS-数学冒险世界-v2.md  产品治理规则-数学冒险世界-v1.md  安全架构设计-数学冒险世界-v1.md  开发阶段-3-任务分解-v1.md  数学冒险世界-需求优化方案-v1.md  架构设计-数学冒险世界-v2.md  立项文档-数学冒险世界-v1.md  部署清单-v4.1.md  部署验证清单-v4.1.md
frontend/: index.html  package-lock.json  package.json
knowledge/: Claude Code软件工程初始化方案设计.md  README.md  知识反馈闭环协议.md  知识审查协议.md  知识文件模板规范.md  规则强制执行映射表.md  避坑汇总.md
plugins/: 必选扩展清单-v4.2.md
scripts/: audit_v4.1.py  dev.ps1  func_test_v4.1.py  quality-gate.sh  start-dev.sh
src/: __init__.py  main.py
tests/: conftest.py
需求准备的相关参考资料/: 竞品分析.md
(+224 files in other folders)
