[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "math-rag-knowledge"
version = "0.1.0"
description = "数学学习 RAG 知识库管理系统 — 支持文档解析、语义检索、智能问答"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web 框架
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # 数据库
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.14.0",
    # 向量数据库
    "pymilvus>=2.5.0",
    # 缓存
    "redis[hiredis]>=5.2.0",
    # LLM
    "openai>=1.55.0",        # DeepSeek API 兼容 OpenAI SDK
    # 文档处理
    "python-multipart>=0.0.17",
    # 配置与日志
    "python-dotenv>=1.0.1",
    "structlog>=24.4.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    # HTTP 客户端
    "httpx>=0.28.0",
    # 安全与认证
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.2.0",
    # 后台调度
    "apscheduler>=3.10.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
math-rag = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "integration: integration tests that require external services (LLM/DB/Docker)",
    "unit: unit tests with mocked dependencies",
    "slow: tests that take >5 seconds",
]
